automation/aws-terraform/main.tf
##################################################################################
# ASIAN REGION GENERATOR
##################################################################################

resource "random_shuffle" "az" {
  input = [
    "ap-east-1", # Asia Pacific (Hong Kong)
    "ap-southeast-3", # Asia Pacific (Jakarta)
    "ap-south-1", # Asia Pacific (Mumbai)
    "ap-northeast-3", # Asia Pacific (Osaka)
    "ap-northeast-2", # Asia Pacific (Seoul)
    "ap-southeast-1", # Asia Pacific (Singapore)
    "ap-northeast-1", # Asia Pacific (Tokyo)
    "me-south-1" # Middle East (Bahrain)
  ]
  result_count = 1
}

##################################################################################
# PROVIDERS
##################################################################################

locals {
  common_tags = {
    Name = "STOP RUSSIA"
  }
}

provider "aws" {
  # region = var.aws_region # region from vars
  region = random_shuffle.az.result[0] # random asian region
}

##################################################################################
# DATA
##################################################################################

data "aws_ssm_parameter" "ami" {
  name = "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"
}

##################################################################################
# RESOURCES
##################################################################################

# NETWORKING #
resource "aws_vpc" "vpc" {
  cidr_block           = var.vpc_cidr_block
  enable_dns_hostnames = var.enable_dns_hostnames

  tags = local.common_tags
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = local.common_tags
}

resource "aws_subnet" "subnet1" {
  cidr_block              = var.vpc_subnet1_cidr_block
  vpc_id                  = aws_vpc.vpc.id
  map_public_ip_on_launch = var.map_public_ip_on_launch

  tags = local.common_tags
}

# ROUTING #
resource "aws_route_table" "rtb" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = local.common_tags
}

resource "aws_route_table_association" "rta-subnet1" {
  subnet_id      = aws_subnet.subnet1.id
  route_table_id = aws_route_table.rtb.id
}

# SECURITY GROUPS #
# Nginx security group
resource "aws_security_group" "instance-sg" {
  name   = "instance_sg"
  vpc_id = aws_vpc.vpc.id

  # HTTP access from anywhere
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # outbound internet access
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = local.common_tags
}

resource "aws_key_pair" "login" {
  key_name   = "login-key"
  public_key = var.public_key
}

# INSTANCES #
resource "aws_instance" "instance" {
  count                  = var.instance_count
  ami                    = nonsensitive(data.aws_ssm_parameter.ami.value)
  instance_type          = var.instance_type
  subnet_id              = aws_subnet.subnet1.id
  vpc_security_group_ids = [aws_security_group.instance-sg.id]

  key_name = aws_key_pair.login.key_name

  user_data = <<EOF
#! /bin/bash
sudo yum install -y docker && \
sudo systemctl start docker && \
sudo docker run -d --rm abagayev/stop-russia
EOF

  tags = local.common_tags

}
